--- a/app/src/main/res/layout/activity_search_books.xml
+++ b/app/src/main/res/layout/activity_search_books.xml
@@ -10,14 +10,16 @@
     tools:context=".SearchBooksActivity">
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="600dp"
+        android:layout_height="48dp"
         android:id="@+id/searchEditText"
         android:singleLine="true"
+        android:maxLength="100"
+        android:background="@android:drawable/editbox_background"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginRight="50dp"
+        android:layout_marginRight="48dp"
         />
 
     <ImageButton
