--- a/app/src/main/res/layout/row_search_result.xml
+++ b/app/src/main/res/layout/row_search_result.xml
@@ -3,17 +3,22 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
         android:id="@+id/bookPic"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <TextView
+        android:layout_marginTop="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textSize="14sp"
+        android:textStyle="bold"
         android:singleLine="true"
         android:id="@+id/bookTitle"
         android:layout_toRightOf="@+id/bookPic"
@@ -25,7 +30,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textSize="12sp"
         android:id="@+id/bookAuthor"
         android:singleLine="true"
         android:layout_marginLeft="2dp"
@@ -40,7 +45,10 @@
         android:layout_marginLeft="2dp"
         android:layout_toRightOf="@+id/bookPic"
         android:layout_below="@+id/bookAuthor"
+        android:isIndicator="true"
+        android:layout_marginBottom="4dp"
+        style = "@android:style/Widget.DeviceDefault.RatingBar.Small"
 
-        />
+      />
 
 </RelativeLayout>
